test/parser/struct_decl_error.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
struct Error {
    r: i32,
    let g = 0,
    // CHECK: [[# @LINE -1 ]]:5: error: expected identifier or fn in struct
    b: i32,
}
// CHECK: ModuleDecl struct_decl_error.dmz
// CHECK-NOT: {{.*}}
